created one member through the api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/naziat
+spring.datasource.username=postgres
+spring.datasource.password=018687
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+#To schema.sqlsd
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:db/schema.sql
